# cg-sandbox

./: AUTHORS  CMakeLists.txt  README.md
cmake/: Custom.cmake
data/: triangle.frag  triangle.vert
docs/doxygen/: doxyfile.in  namespacedocumentation.h
source/: CMakeLists.txt  cg-sandbox-version.h.in
source/cg-sandbox/: Application.cpp  CMakeLists.txt  DemoPainter.cpp  DemoPainter.h  DemoPainter21.cpp  DemoPainter21.h  DemoPainter32.cpp  DemoPainter32.h  main.cpp
source/cg-sandbox/interaction/: Navigation.cpp  Navigation.h
source/cg-sandbox/painter/: AbstractPainter.cpp  AbstractPainter.h  Camera.cpp  Camera.h  FileAssociatedAsset.cpp  FileAssociatedAsset.h  FileAssociatedShader.cpp  FileAssociatedShader.h  FileAssociatedTexture.cpp  FileAssociatedTexture.h  OpenGL.cpp  OpenGL.h  OpenGL.hpp  OpenGLContextDescription.h
source/cg-sandbox/ui/: Application.h  Canvas.cpp  Canvas.h  Viewer.cpp  Viewer.h  Viewer.ui
source/cg-sandbox/util/: CachedValue.h  CachedValue.hpp  ChronoTimer.cpp  ChronoTimer.h  CyclicTime.cpp  CyclicTime.h
